| Summary: | ASTERISK-26128: Alembic scripts are failing | ||
| Reporter: | Mark Michelson (mmichelson) | Labels: | |
| Date Opened: | 2016-06-20 11:54:29 | Date Closed: | 2016-06-22 15:24:43 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Contrib/General |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | 837aa67461fb_add_pjsip_endpoint_ip_access_control_.py outright fails on postgres when you run 'alembic upgrade'.
837aa67461fb_ps_contacts_add_authenticate_qualify.py's file name doesn't match the hash in the file and it sets "authentcate_qualify" as a yesno field but we insert "false" which causes a failure at runtime. | ||
| Comments: | |||